# scorch

./: .gitignore  CMakeLists.txt  README.md  THNN_CMakeLists.txt  build_deps.sh  get_deps.sh  scorch.c  scorch.h
