CMAKE_MINIMUM_REQUIRED(VERSION 2.8 FATAL_ERROR)

PROJECT(SCORCH)

SET(SRCS
  scorch.c)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/install/include/TH)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/install/include/THNN)

LINK_DIRECTORIES( ${CMAKE_CURRENT_SOURCE_DIR}/install/lib)

ADD_EXECUTABLE(scorch ${SRCS})
TARGET_LINK_LIBRARIES(scorch TH THNN)

